--- a/views/index.html
+++ b/views/index.html
@@ -10,5 +10,6 @@
         <input id="url_input" type="url" name="url" placeholder="Pon tu link aqui" />
         <input id="submit" type="submit" value="Obtener Video" name="prueba"/>
     </form>
+    <img src='/public/CapturaTwittter.PNG' alt="Demostration">
   </body>
 </html>
