redirect instead of json the new url

--- a/views/index.html
+++ b/views/index.html
@@ -6,9 +6,9 @@
 
   <body>
     <h1>Twitter Video Downloader</h1>
-    <form action="api/url" method="POST">
+    <form action="api/url" method="POST" target="_blank">
         <input id="url_input" type="url" name="url" placeholder="Pon tu link aqui" />
-        <input id="submit" type="submit" value="Obtener Video" name="prueba"/>
+        <input id="submit" type="submit" value="Obtener Video" name="prueba" />
     </form>
     <img src='/public/CapturaTwittter.PNG' alt="Demostration">
   </body>
